--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-#theme: jekyll-theme-midnight
-remote_theme: just-the-docs/just-the-docs
+theme: jekyll-theme-midnight
+#remote_theme: just-the-docs/just-the-docs
